[tool.poetry]
name = "torchlite-notebooks"
version = "0.1.0"
description = ""
authors = ["cwulfman <cwulfman@princeton.edu>"]
readme = "README.md"
packages = [{include = "torchlite_notebooks", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
jupyter = "^1.0.0"
torchlite = { git = "git@github.com:htrc/torchlite-backend.git" }
requests = "^2.28.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
